--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,11 @@
 data/*
+!data/
+!data/raw/
+!data/processed/
+data/raw/*
+data/processed/*
+!data/raw/.gitkeep
+!data/processed/.gitkeep
 .venv/
 .env
+.DS_Store
