refactor: data保存先をdata直下に統一

--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,6 @@
 data/*
 !data/
-!data/raw/
-!data/processed/
-data/raw/*
-data/processed/*
-!data/raw/.gitkeep
-!data/processed/.gitkeep
+!data/.gitkeep
 .venv/
 .env
 .DS_Store
